@@ -1,3 +1,10 @@
+2006-11-09	tsch
+
+	* MakeHelper.pm, CairoSurface.t: When comparing enum values, look
+	at length+1, not just length, bytes to discern string pairs like
+	'color' and 'color-alpha'.  Duh!  Many thanks to Martijn van Beers
+	for finding this bug.
+
 2006-09-24	tsch
 
 	* Cairo.pm, NEWS: Stable release 1.01.
